; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_lm93.c_store_pwm_auto_vrdhot_ramp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_lm93.c_store_pwm_auto_vrdhot_ramp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.i2c_client = type { i32 }
%struct.lm93_data = type { i32 }

@LM93_REG_PWM_RAMP_CTL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*, i64)* @store_pwm_auto_vrdhot_ramp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @store_pwm_auto_vrdhot_ramp(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.i2c_client*, align 8
  %10 = alloca %struct.lm93_data*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %13 = load %struct.device*, %struct.device** %5, align 8
  %14 = call %struct.i2c_client* @to_i2c_client(%struct.device* %13)
  store %struct.i2c_client* %14, %struct.i2c_client** %9, align 8
  %15 = load %struct.i2c_client*, %struct.i2c_client** %9, align 8
  %16 = call %struct.lm93_data* @i2c_get_clientdata(%struct.i2c_client* %15)
  store %struct.lm93_data* %16, %struct.lm93_data** %10, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @simple_strtoul(i8* %17, i32* null, i32 10)
  store i32 %18, i32* %11, align 4
  %19 = load %struct.lm93_data*, %struct.lm93_data** %10, align 8
  %20 = getelementptr inbounds %struct.lm93_data, %struct.lm93_data* %19, i32 0, i32 0
  %21 = call i32 @mutex_lock(i32* %20)
  %22 = load %struct.i2c_client*, %struct.i2c_client** %9, align 8
  %23 = load i32, i32* @LM93_REG_PWM_RAMP_CTL, align 4
  %24 = call i32 @lm93_read_byte(%struct.i2c_client* %22, i32 %23)
  store i32 %24, i32* %12, align 4
  %25 = load i32, i32* %12, align 4
  %26 = and i32 %25, 240
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @LM93_RAMP_TO_REG(i32 %27)
  %29 = and i32 %28, 15
  %30 = or i32 %26, %29
  store i32 %30, i32* %12, align 4
  %31 = load %struct.i2c_client*, %struct.i2c_client** %9, align 8
  %32 = load i32, i32* @LM93_REG_PWM_RAMP_CTL, align 4
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @lm93_write_byte(%struct.i2c_client* %31, i32 %32, i32 %33)
  %35 = load %struct.lm93_data*, %struct.lm93_data** %10, align 8
  %36 = getelementptr inbounds %struct.lm93_data, %struct.lm93_data* %35, i32 0, i32 0
  %37 = call i32 @mutex_unlock(i32* %36)
  ret i32 0
}

declare dso_local %struct.i2c_client* @to_i2c_client(%struct.device*) #1

declare dso_local %struct.lm93_data* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @simple_strtoul(i8*, i32*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @lm93_read_byte(%struct.i2c_client*, i32) #1

declare dso_local i32 @LM93_RAMP_TO_REG(i32) #1

declare dso_local i32 @lm93_write_byte(%struct.i2c_client*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
